Fix: Ensure No results for... text is visible in Algolia search box

--- a/content/css/jenkins.css
+++ b/content/css/jenkins.css
@@ -1545,3 +1545,8 @@ ion-icon.report {
   height: 25vw;
   max-height: 128px;
 }
+
+.DocSearch-NoResults p.DocSearch-Title {
+  color: rgba(0, 0, 0, 0.528);
+  font-weight: bold;
+}
